
      Function             | Replacement
      ---------------------|------------------
      bicubic              | interp2
      delaunay3            | delaunay
      dump_prefs           | individual preference get/set routines
      find_dir_in_path     | dir_in_loadpath
      finite               | isfinite
      fmod                 | rem
      fnmatch              | glob or regexp
      luinc                | ilu or ichol
      nfields              | numfields
      octave_tmp_file_name | tempname
      syl                  | sylvester
      usage                | print_usage

      allow_noninteger_range_as_index
      do_braindead_shortcircuit_evaluation

 ** The following functions were deprecated in Octave 3.8 and will be
    removed from Octave 4.2 (or whatever version is the second major
    release after 3.8):

      default_save_options    java_new
      gen_doc_cache           java_unsigned_conversion
      interp1q                javafields
      isequalwithequalnans    javamethods
      java_convert_matrix     re_read_readline_init_file
      java_debug              read_readline_init_file
      java_invoke             saving_history

 ** The following functions were deprecated in Octave 3.6 and have been
    removed from Octave 4.0.

      cut                polyderiv
      cor                shell_cmd
      corrcoef           studentize
      __error_text__     sylvester_matrix
      error_text

 ** The following keywords were deprecated in Octave 3.8 and have been
    removed from Octave 4.0

      static

 ** The following configuration variables were deprecated in Octave 3.8
    and have been removed from Octave 4.0

      CC_VERSION  (now GCC_VERSION)
      CXX_VERSION (now GXX_VERSION)

 ** The internal function atan2 of the sparse matrix class has been deprecated
    in Octave 4.0 and will be removed from Octave 4.4 (or whatever version is
    the second major release after 4.0).  Use the Fatan2 function with sparse